stage3 report